# oregon-cannabis-license-watch

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-DATA  PLAN.md  PRIVACY.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: backfill.yml  ci.yml  nightly.yml
data/snapshots/: 2026-04-28.csv  2026-05-04.csv  2026-05-05.csv  2026-05-06.csv  2026-05-07.csv  2026-05-08.csv  2026-05-09.csv  2026-05-10.csv  2026-05-11.csv  2026-05-12.csv  2026-05-13.csv  2026-05-14.csv  2026-05-15.csv  2026-05-16.csv  2026-05-17.csv  2026-05-18.csv  2026-05-19.csv  2026-05-20.csv  2026-05-21.csv  2026-05-22.csv  2026-05-23.csv  2026-05-24.csv  2026-05-25.csv  2026-05-26.csv  2026-05-27.csv  2026-05-28.csv  2026-05-29.csv  2026-05-30.csv  2026-05-31.csv  2026-06-01.csv  2026-06-02.csv  2026-06-03.csv  2026-06-04.csv  2026-06-05.csv  2026-06-06.csv  2026-06-07.csv  2026-06-08.csv  2026-06-09.csv  2026-06-10.csv  2026-06-11.csv  (+42 more)
docs/: ARCHITECTURE.md  DATA_CATALOG.md  DATA_SOURCES.md  TABLEAU_RESEARCH.md
etl/: __init__.py  backfill.py  diff.py  extract.py  load.py  publish.py  run.py  schema.sql  transform.py  vocab.py
etl/certs/: README.md
public/: changes.json  rss.xml
tests/: conftest.py  test_diff.py  test_extract.py  test_load.py  test_publish.py  test_transform.py
tests/fixtures/: sample.csv
vocabularies/: change_type.yaml  license_type.yaml  status.yaml
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  styles.css  types.ts
