[project]
name = "oregon-cannabis-license-watch"
version = "0.1.0"
description = "Public-data ETL pipeline that snapshots OLCC cannabis licensing data nightly and publishes a change feed."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Mark Pernotto", email = "mark@pernotto.com" }]

dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["etl*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "network: tests that hit live external services; excluded from CI by default",
    "integration: tests that require a running Postgres at $DATABASE_URL",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
